pythonsrc/mapreduce
Last login: Thu Mar 30 15:22:44 on ttys000
%                                                                               bogon% python3
Python 3.5.0 (v3.5.0:374f501f4567, Sep 12 2015, 11:00:19) 
[GCC 4.2.1 (Apple Inc. build 5666) (dot 3)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> def f(x):
...     return x*x
... 
>>> r = map(f, [1,2,3,4,5,6,7,8,9])
>>> list(r)
[1, 4, 9, 16, 25, 36, 49, 64, 81]
>>> list(map(str,[1,2,3,4,5,6,7,8,9]))
['1', '2', '3', '4', '5', '6', '7', '8', '9']
>>> from functools import reduce
>>> def add(x,y):
...     return x+y
... 
>>> reduce(add,[1,3,5,7,9])
25
>>> from functools import reduce
>>> def fn(x,y):
...     return x*10 + y
... 
>>> reduce(fn,[1,3,5,7,9])
13579
>>> from functools import reduce
>>> def fn(x,y):
...     return x*10 + y
... 
>>> def char2num(s):
...     return {'0':0,'1':1,'2':2,'3':3,'4':4,'5':5,'6':6,'7':7,'8':8,'9':9}[s]
... 
>>> reduce(fn, map(char2num,'13579'))
13579
>>> from functools import reduce
>>> def str2int(s):
...     def fn(x ,y):
...     
	
...     
	
...             return x*10 + y
...     def char2num(s):
...     
	
...             return {'0':0,'1':1,'2':2,'3':3,'4':4,'5':5,'6':6,'7':7,'8':8,'9':9}[s]
...     return reduce(fn,map(char2num,s))
... 
>>> def is_odd(n)
  File "<stdin>", line 1
    def is_odd(n)
                ^
SyntaxError: invalid syntax
>>> def is_odd(n):
...     return n%2==1
... list(filter(is_odd, [1,2,4,5,6,9,10,15]))
  File "<stdin>", line 3
    list(filter(is_odd, [1,2,4,5,6,9,10,15]))
       ^
SyntaxError: invalid syntax
>>> def is_odd(n):
...     return n%2==1
... list(filter(is_odd, [1,2,4,5,6,9,10,15]))
  File "<stdin>", line 3
    list(filter(is_odd, [1,2,4,5,6,9,10,15]))
       ^
SyntaxError: invalid syntax
>>> 
